# nes6502

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
src/: CMakeLists.txt  Makefile  main.cpp
src/Bus/: Bus.cpp  Bus.h
src/CPU/: Bus.cpp  Bus.h  nes6502.cpp  nes6502.h
tests/: CMakeLists.txt  cpu_tests.cpp
